# BespokeSynth

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  88 Keybed.json  BespokeSynth.desktop  BespokeSynth.jucer  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Taskfile.yml  add-file-headers.py  azure-pipelines.yml  bespoke_script_autodoc.py  ensure_task.bat  ensure_task.sh  header_file.txt  justfile  scripting_reference.txt
BespokeVSTScanner/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h
Source/: ADSR.cpp  ADSR.h  ADSRDisplay.cpp  ADSRDisplay.h  ADSRTrigger.cpp  ADSRTrigger.h  AbletonDeviceShared.h  AbletonLink.cpp  AbletonLink.h  AbletonMoveControl.cpp  AbletonMoveControl.h  AbletonMoveLCD.cpp  AbletonMoveLCD.h  Acciaccatura.cpp  Acciaccatura.h  AdditiveVoice.cpp  AdditiveVoice.h  Amplifier.cpp  Amplifier.h  Arpeggiator.cpp  Arpeggiator.h  ArrangementController.cpp  ArrangementController.h  ArrangementMaster.cpp  ArrangementMaster.h  AudioLevelToCV.cpp  AudioLevelToCV.h  AudioMeter.cpp  AudioMeter.h  AudioRouter.cpp  AudioRouter.h  AudioSend.cpp  AudioSend.h  AudioSplitter.cpp  AudioSplitter.h  AudioSyncer.cpp  AudioSyncer.h  AudioToCV.cpp  AudioToCV.h  AudioToPulse.cpp  (+858 more)
Source/AudioEffects/: Amplifier.cpp  Amplifier.h  AudioMeter.cpp  AudioMeter.h  AudioRouter.cpp  AudioRouter.h  AudioSend.cpp  AudioSend.h  Autotalent.cpp  Autotalent.h  BandVocoder.cpp  BandVocoder.h  DCOffset.cpp  EQModule.cpp  EQModule.h  EffectChain.cpp  FFTtoAdditive.cpp  FeedbackModule.cpp  FeedbackModule.h  FreqDelay.cpp  FreqDelay.h  FreqDomainBoilerplate.cpp  InputChannel.cpp  InputChannel.h  Inverter.cpp  Lissajous.cpp  Looper.cpp  LooperRecorder.cpp  LooperRecorder.h  MultibandCompressor.cpp  MultitapDelay.cpp  MultitapDelay.h  OutputChannel.cpp  OutputChannel.h  Panner.cpp  Panner.h  PitchChorus.cpp  PitchChorus.h  Producer.cpp  Rewriter.cpp  (+21 more)
Source/CFMessaging/: Bespoke_CFMessaging.cpp  KontrolKommunicator.cpp  KontrolKommunicator.h  ListenPort.cpp  ListenPort.h  NIMessage.cpp  NIMessage.h  SendPort.cpp  SendPort.h
Source/Instruments/: CircleSequencer.cpp  FourOnTheFloor.cpp  FourOnTheFloor.h  KeyboardDisplay.cpp  LaunchpadKeyboard.cpp  LaunchpadKeyboard.h  M185Sequencer.cpp  MidiController.cpp  NoteCanvas.cpp  NoteChainNode.cpp  NoteChainNode.h  NoteCounter.cpp  NoteCounter.h  NoteCreator.cpp  NoteLooper.cpp  NoteLooper.h  NoteSinger.cpp  NoteSinger.h  NoteStepSequencer.cpp  NoteStepSequencer.h  PlaySequencer.cpp  PlaySequencer.h  Polyrhythms.cpp  RandomNoteGenerator.cpp  RandomNoteGenerator.h  SliderSequencer.cpp  SliderSequencer.h  StepSequencer.cpp  StepSequencer.h
Source/Modulators/: AudioLevelToCV.cpp  AudioLevelToCV.h  AudioToCV.cpp  ControlSequencer.cpp  ControlSequencer.h  CurveLooper.cpp  EnvelopeModulator.cpp  FloatSliderLFOControl.cpp  FloatSliderLFOControl.h  FubbleModule.cpp  FubbleModule.h  GridSliders.cpp  MacroSlider.cpp  MacroSlider.h  ModWheelToCV.cpp  ModWheelToCV.h  ModulatorAccum.cpp  ModulatorAdd.cpp  ModulatorAddCentered.cpp  ModulatorCurve.cpp  ModulatorExpression.cpp  ModulatorGravity.cpp  ModulatorMult.cpp  ModulatorSmoother.cpp  ModulatorSmoother.h  ModulatorSubtract.cpp  NoteToFreq.cpp  NoteToFreq.h  NoteToMs.cpp  PitchToCV.cpp  PitchToCV.h  PitchToSpeed.cpp  PitchToSpeed.h  PressureToCV.cpp  Ramper.cpp  Ramper.h  ValueSetter.cpp  ValueSetter.h  VelocityToCV.cpp  VinylTempoControl.cpp
Source/NoteEffects/: Arpeggiator.cpp  Arpeggiator.h  Capo.cpp  ChordDisplayer.cpp  ChordDisplayer.h  ChordHolder.cpp  ChordHolder.h  Chorder.cpp  Chorder.h  Kicker.cpp  KompleteKontrol.cpp  LaunchpadNoteDisplayer.cpp  LaunchpadNoteDisplayer.h  LinnstrumentControl.cpp  MPESmoother.cpp  MPESmoother.h  MPETweaker.cpp  MPETweaker.h  MidiCapturer.cpp  MidiCapturer.h  MidiControlChange.cpp  MidiControlChange.h  ModWheel.cpp  ModWheel.h  ModulationVisualizer.cpp  ModulationVisualizer.h  ModwheelToPressure.cpp  ModwheelToPressure.h  ModwheelToVibrato.cpp  ModwheelToVibrato.h  Monophonify.cpp  Neighborhooder.cpp  NoteChance.cpp  NoteChance.h  NoteDelayer.cpp  NoteDelayer.h  NoteDisplayer.cpp  NoteEcho.cpp  NoteExpressionRouter.cpp  NoteFilter.cpp  (+72 more)
Source/Pulse/: AudioToPulse.cpp  AudioToPulse.h  BoundsToPulse.cpp  BoundsToPulse.h  NoteToPulse.cpp  PulseButton.cpp  PulseButton.h  PulseChance.cpp  PulseDelayer.cpp  PulseGate.cpp  PulseGate.h  PulseHocket.cpp  PulseSequence.cpp  PulseTrain.cpp  Pulser.cpp
Source/Synths/: BeatBloks.cpp  BeatBloks.h  Beats.cpp  Beats.h  ClipLauncher.cpp  ClipLauncher.h  ControlTactileFeedback.cpp  ControlTactileFeedback.h  ControllingSong.cpp  ControllingSong.h  DebugAudioSource.cpp  DrumPlayer.cpp  DrumSynth.cpp  DrumSynth.h  FMSynth.cpp  FMSynth.h  FollowingSong.cpp  FollowingSong.h  KarplusStrong.cpp  Metronome.cpp  Razor.cpp  SampleCanvas.cpp  SamplePlayer.cpp  SamplePlayer.h  Sampler.cpp  Sampler.h  SeaOfGrain.cpp  SignalGenerator.cpp  SignalGenerator.h  SingleOscillator.cpp  SingleOscillator.h  VSTPlugin.cpp  VSTPlugin.h
Source/cmake/: BespokeSynth.manifest.in  BespokeSynth.manifest.rc.in  bundle-python.cmake  install-quiet.cmake  lib.cmake  python.manifest.in  versiontools.cmake
Source/core/: CMakeLists.txt
Source/exprtk/: exprtk.hpp
Source/freeverb/: CMakeLists.txt  allpass.cpp  allpass.hpp  comb.hpp  revmodel.cpp  revmodel.hpp
Source/glew/: Bespoke_glew.c
Source/leathers/: automatic-inline  behavior-change  c++98-compat  c++98-compat-pedantic  cast-align  catch-semantic-changed  compatibility-c++98  conditional-uninitialized  constant-conditional  conversion  conversion-loss  dflt-ctor-base-inaccessible  digraphs-not-supported  disabled-macro-expansion  duplicate-method-match  format  ill-formed-comma-expr  implicit-atomic-properties  implicit-retain-self  inline  int-conversion  is-defined-to-be  layout-changed  missing-braces  missing-field-initializers  missing-prototypes  name-length-exceeded  narrowing  newline-eof  no-such-warning  non-virtual-dtor  objc-root-class  old-style-cast  overloaded-virtual  padded  protocol  (+21 more)
libs/: CMakeLists.txt
(+406 files in other folders)
